// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Participants updated use-case Should add and remove users from channel on reviewers list update 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [
    [
      "333333",
    ],
  ],
  "kicksFromChannels": [
    [
      "111111",
    ],
  ],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [],
  "topicUpdates": [],
}
`;

exports[`Participants updated use-case Should not delete removed reviewer if he is still participating as assignee or PR author 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [
    [
      "333333",
    ],
  ],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [],
  "topicUpdates": [],
}
`;
